# marketing-roi-kit

./: README.md  config_example.yml  pyproject.toml
roi_kit/: cli.py  config.py  pipeline.py
roi_kit/extract/: csv_extractor.py
roi_kit/metrics/: incrementality.py  roi.py
roi_kit/reporting/: exporter.py  streamlit_app.py
roi_kit/transform/: standardise_schema.py
